chore(ci): make it feel more real

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,7 @@
 name = "mi_result"
 version = "0.1.0"
 edition = "2024"
+description = "A Rust crate providing a custom Result type with enhanced functionality."
+license = "MIT"
 
 [dependencies]
